# python-metaflow-project.archetype

./: README.md  archetype.rhai
contents/base/{{ project-name }}/: .gitignore  Dockerfile  create_workflows.sh  pyproject.toml
contents/base/{{ project-name }}/.github/workflows/: build-dev.yml  publish.yml  test.yml
contents/base/{{ project-name }}/.platform/kubernetes/base/: deploy_metaflows.yaml  example_flow_config.yaml  kustomization.yaml
contents/base/{{ project-name }}/src/{{ project_name }}/metaflows/: example_flow.py
contents/package/{{ project-name }}/tests/: test_{{ package_name }}.py
